# xworkflow

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cobertura.xml  dhat-heap.json
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: bench_components.rs  bench_data_ops.rs  bench_dispatch.rs  bench_macro_iteration.rs  bench_macro_scalability.rs  bench_macro_topology.rs  bench_meso_dispatcher.rs  bench_meso_node_executors.rs  bench_meso_sandbox_js.rs  bench_meso_sandbox_wasm.rs  bench_micro_condition.rs  bench_micro_dsl.rs  bench_micro_segment.rs  bench_micro_template.rs  bench_micro_variable_pool.rs  bench_scalability.rs
benches/helpers/: mod.rs  pool_factories.rs  workflow_builders.rs
crates/xworkflow-docextract-builtin/: Cargo.toml
crates/xworkflow-docextract-builtin/src/: docx.rs  encoding.rs  html.rs  lib.rs  pdf.rs  spreadsheet.rs  structured.rs  table.rs  text.rs
crates/xworkflow-docextract-builtin/tests/: integration_tests.rs
crates/xworkflow-nodes-code/: Cargo.toml
crates/xworkflow-nodes-code-dylib/: Cargo.toml
crates/xworkflow-nodes-code-dylib/src/: lib.rs
crates/xworkflow-nodes-code/src/: lib.rs
crates/xworkflow-nodes-core/: Cargo.toml
crates/xworkflow-nodes-core-dylib/: Cargo.toml
crates/xworkflow-nodes-core-dylib/src/: lib.rs
crates/xworkflow-nodes-docextract/: Cargo.toml
crates/xworkflow-nodes-http/: Cargo.toml
crates/xworkflow-nodes-http-dylib/: Cargo.toml
crates/xworkflow-nodes-llm/: Cargo.toml
crates/xworkflow-nodes-llm-dylib/: Cargo.toml
crates/xworkflow-nodes-llm-dylib/src/: lib.rs
crates/xworkflow-nodes-subgraph/: Cargo.toml
crates/xworkflow-nodes-subgraph-dylib/: Cargo.toml
crates/xworkflow-nodes-subgraph-dylib/src/: lib.rs
crates/xworkflow-nodes-transform/: Cargo.toml
crates/xworkflow-nodes-transform-dylib/: Cargo.toml
crates/xworkflow-nodes-transform-dylib/src/: lib.rs
crates/xworkflow-plugin-wasm/: Cargo.toml
crates/xworkflow-plugin-wasm/src/: host_functions.rs  lib.rs  manifest.rs  runtime.rs
crates/xworkflow-sandbox-js/: Cargo.toml
crates/xworkflow-sandbox-js/src/: builtins.rs  lib.rs  sandbox.rs  security.rs  streaming.rs
crates/xworkflow-sandbox-wasm/: Cargo.toml
crates/xworkflow-sandbox-wasm/src/: lib.rs  sandbox.rs
crates/xworkflow-template-jinja/: Cargo.toml
crates/xworkflow-types/: Cargo.toml
docs/: SCHEDULER.md  V8沙箱设计文档.md  agent-node-design.md  architecture-reorganization-design.md  benchmark-design.md  benchmark-optimization-design.md  benchmark-redesign.md  builtin-plugin-extraction-design.md  checkpoint-design.md  debugger-mode-design.md  design-implementation-gaps.md  design-obviousness-improvement.md  document-extractor-design.md  dsl-validation-design.md  e2e-test-coverage-design.md  e2e-test-framework-design.md  engine-decoupling-design.md  error-handler-workflow-design.md  error-handling-design.md  http-connection-pool-design.md  human-input-design.md  js-sandbox-builtins-design.md  lightweight-plugin-integration-design.md  llm-provider-design.md  memory-leak-test-design.md  memory-system-design.md  native-file-type-design.md  optimization-analysis.md  package-variants-design.md  parallel-execution-design.md  plugin-system-design.md  question-classifier-design.md  runtime-context-architecture-analysis.md  runtime-context-layered-architecture-design.md  runtime-performance-design.md  rust_node_execution_spec.md  rust_workflow_engine_spec.md  sandbox-pooling-design.md  sandbox-template-plugin-extraction-design.md  security-design.md  (+9 more)
examples/: scheduler_demo.rs
src/: lib.rs  main.rs  scheduler.rs
src/api/: handle.rs  mod.rs  runner.rs
src/application/: mod.rs
src/compiler/: cache.rs  cache.rs.tests  compiled_workflow.rs  compiler.rs  helpers.rs  mod.rs  runner.rs
src/core/: debug.rs  dispatcher.rs  event_bus.rs  execution_context.rs  http_client.rs  mod.rs  plugin_gate.rs  runtime_context.rs  runtime_group.rs  safe_stop.rs  security_gate.rs  sub_graph_runner.rs  variable_pool.rs  workflow_context.rs  workflow_runtime.rs
src/domain/: mod.rs
src/domain/model/: flow.rs  (+5 more)
src/dsl/: mod.rs  parser.rs  schema.rs  validator.rs
src/engine/: mod.rs
src/error/: error_context.rs  mod.rs  node_error.rs  workflow_error.rs
src/evaluator/: condition.rs  mod.rs  operators.rs  type_coercion.rs
src/graph/: builder.rs  mod.rs  traversal.rs  types.rs  validator.rs
src/infrastructure/: mod.rs
src/llm/: error.rs  executor.rs  mod.rs  question_classifier.rs  types.rs
src/mcp/: client.rs  config.rs  error.rs  mod.rs  pool.rs  tools.rs
src/memory/: in_memory.rs  mod.rs  provider.rs  resolver.rs  types.rs
src/nodes/: agent.rs  control_flow.rs  data_transform.rs  document_extract.rs  executor.rs  gather.rs  human_input.rs  memory.rs  mod.rs  registry.rs  subgraph.rs  subgraph_nodes.rs  tool.rs  utils.rs
src/plugin/: error.rs  host_functions.rs  manager.rs  manifest.rs  mod.rs  runtime.rs
src/plugin_system/: config.rs  context.rs  error.rs  extensions.rs  hooks.rs  loader.rs  macros.rs  mod.rs  registry.rs  traits.rs
src/sandbox/: builtin.rs  error.rs  js_builtins.rs  manager.rs  mod.rs  types.rs  wasm_sandbox.rs
src/scheduler/: plugin_gate.rs  security_gate.rs
src/security/: audit.rs  credential.rs  governor.rs  mod.rs  network.rs  policy.rs  resource_group.rs  sandbox.rs  validation.rs
src/template/: engine.rs  jinja.rs  mod.rs  variable_resolver.rs
tests/: agent_node_integration.rs  e2e_tests.rs  integration_tests.rs  memory_feature_integration.rs  plugin_system_registry.rs  plugin_system_tests.rs
tests/compiler/: compiler_tests.rs
tests/core/: evaluator_tests.rs  mod.rs
tests/e2e/: macros.rs  mod.rs  runner.rs
tests/integration/: additional_integration_tests.rs  macros.rs  mod.rs  runner.rs
tests/llm/: llm_tests.rs
tests/memory/: channel_tests.rs  dispatcher_tests.rs  helpers.rs  js_runtime_tests.rs  mod.rs  plugin_tests.rs  pool_tests.rs  sandbox_tests.rs  stream_tests.rs  stress_tests.rs  subgraph_tests.rs  task_tests.rs
tests/nodes/: executor_tests.rs  mod.rs  node_data_tests.rs
tests/sandbox/: manager_tests.rs  mod.rs
(+1128 files in other folders)
