[package]
name = "xworkflow"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
name = "xworkflow"
path = "src/lib.rs"

[[bin]]
name = "xworkflow"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Template engine
minijinja = { version = "2.0", features = ["builtins", "fuel"] }

# HTTP client (for LLM APIs and persistence services)
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
base64 = "0.22"
libloading = { version = "0.8", optional = true }
url = "2.5"

# WASM runtime
wasmtime = "27"
wasmtime-wasi = "27"
wat = "1"

# JavaScript sandbox engine
boa_engine = "0.20"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[features]
default = [
	"security",
	"builtin-core-nodes",
	"builtin-transform-nodes",
	"builtin-http-node",
	"builtin-code-node",
	"builtin-subgraph-nodes",
	"builtin-llm-node",
]
security = []
plugin-system = ["libloading"]
builtin-core-nodes = []
builtin-transform-nodes = []
builtin-http-node = []
builtin-code-node = []
builtin-subgraph-nodes = []
builtin-llm-node = []

[workspace]
resolver = "2"
members = [
	".",
	"crates/xworkflow-types",
	"crates/xworkflow-nodes-core",
	"crates/xworkflow-nodes-transform",
	"crates/xworkflow-nodes-http",
	"crates/xworkflow-nodes-code",
	"crates/xworkflow-nodes-subgraph",
	"crates/xworkflow-nodes-llm",
	"crates/xworkflow-nodes-core-dylib",
	"crates/xworkflow-nodes-transform-dylib",
	"crates/xworkflow-nodes-http-dylib",
	"crates/xworkflow-nodes-code-dylib",
	"crates/xworkflow-nodes-subgraph-dylib",
	"crates/xworkflow-nodes-llm-dylib",
]

[[bench]]
name = "bench_dispatch"
harness = false

[[bench]]
name = "bench_scalability"
harness = false

[[bench]]
name = "bench_components"
harness = false

[[bench]]
name = "bench_data_ops"
harness = false
