[package]
name = "xworkflow"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
name = "xworkflow"
path = "src/lib.rs"

[[bin]]
name = "xworkflow"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.18"

# Template engine
# (moved to xworkflow-template-jinja)

# HTTP client (for LLM APIs and persistence services)
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.7"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
base64 = "0.22"
libloading = { version = "0.8", optional = true }
url = "2.5"
boa_engine = { version = "0.20", optional = true }
compact_str = "0.8"
im = "15"

# WASM runtime (used by plugin system and WASM plugins)
wasmtime = "27"
wasmtime-wasi = "27"
wat = "1"

# JavaScript sandbox engine and WASM runtime moved to plugin crates
rand = "0.8"

# Shared types
xworkflow-types = { path = "crates/xworkflow-types" }

# Optional built-in plugin crates
xworkflow-sandbox-js = { path = "crates/xworkflow-sandbox-js", optional = true }
xworkflow-sandbox-wasm = { path = "crates/xworkflow-sandbox-wasm", optional = true }
xworkflow-template-jinja = { path = "crates/xworkflow-template-jinja", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dhat = "0.3"

[features]
default = [
	"security",
	"plugin-system",
	"builtin-sandbox-js",
	"builtin-sandbox-wasm",
	"builtin-template-jinja",
	"builtin-core-nodes",
	"builtin-transform-nodes",
	"builtin-http-node",
	"builtin-code-node",
	"builtin-subgraph-nodes",
	"builtin-llm-node",
]
security = ["xworkflow-sandbox-js?/security"]
plugin-system = ["libloading"]
builtin-sandbox-js = ["dep:xworkflow-sandbox-js", "dep:boa_engine"]
builtin-sandbox-wasm = ["dep:xworkflow-sandbox-wasm"]
builtin-template-jinja = ["dep:xworkflow-template-jinja"]
builtin-core-nodes = []
builtin-transform-nodes = ["builtin-template-jinja"]
builtin-http-node = []
builtin-code-node = ["builtin-sandbox-js"]
builtin-subgraph-nodes = []
builtin-llm-node = []

[workspace]
resolver = "2"
members = [
	".",
	"crates/xworkflow-types",
	"crates/xworkflow-sandbox-js",
	"crates/xworkflow-sandbox-wasm",
	"crates/xworkflow-template-jinja",
	"crates/xworkflow-nodes-core",
	"crates/xworkflow-nodes-transform",
	"crates/xworkflow-nodes-http",
	"crates/xworkflow-nodes-code",
	"crates/xworkflow-nodes-subgraph",
	"crates/xworkflow-nodes-llm",
	"crates/xworkflow-nodes-core-dylib",
	"crates/xworkflow-nodes-transform-dylib",
	"crates/xworkflow-nodes-http-dylib",
	"crates/xworkflow-nodes-code-dylib",
	"crates/xworkflow-nodes-subgraph-dylib",
	"crates/xworkflow-nodes-llm-dylib",
]

[[bench]]
name = "bench_dispatch"
harness = false

[[bench]]
name = "bench_scalability"
harness = false

[[bench]]
name = "bench_components"
harness = false

[[bench]]
name = "bench_data_ops"
harness = false
