[package]
name = "xworkflow"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
name = "xworkflow"
path = "src/lib.rs"

[[bin]]
name = "xworkflow"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.18"
toml = "0.8"

# Template engine
# (moved to xworkflow-template-jinja)

# HTTP client (for LLM APIs and persistence services)
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.7"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
base64 = "0.22"
libloading = { version = "0.8", optional = true }
url = "2.5"
compact_str = "0.8"
im = "15"
mime_guess = "2"
infer = "0.16"

# JavaScript sandbox engine and WASM runtime moved to plugin crates
rand = "0.8"

# Shared types
xworkflow-types = { path = "crates/xworkflow-types" }

# Optional built-in plugin crates
xworkflow-sandbox-js = { path = "crates/xworkflow-sandbox-js", optional = true }
xworkflow-sandbox-wasm = { path = "crates/xworkflow-sandbox-wasm", optional = true }
xworkflow-plugin-wasm = { path = "crates/xworkflow-plugin-wasm", optional = true }
xworkflow-docextract-builtin = { path = "crates/xworkflow-docextract-builtin", optional = true }
minijinja = { version = "2.0", features = ["builtins", "fuel"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dhat = "0.3"

[features]
default = [
	"security",
	"plugin-system",
	"compiler",
	"workflow-cache",
	"builtin-template-jinja",
	"builtin-core-nodes",
	"builtin-transform-nodes",
	"builtin-http-node",
	"builtin-subgraph-nodes",
	"builtin-llm-node",
]
compiler = []
workflow-cache = ["compiler"]
security = ["xworkflow-sandbox-js?/security"]
wasm-runtime = ["dep:xworkflow-plugin-wasm"]
plugin-system = ["libloading"]
builtin-sandbox-js = ["dep:xworkflow-sandbox-js"]
builtin-sandbox-wasm = ["dep:xworkflow-sandbox-wasm"]
builtin-template-jinja = ["dep:minijinja"]
builtin-core-nodes = []
builtin-transform-nodes = ["builtin-template-jinja"]
builtin-http-node = []
builtin-code-node = ["builtin-sandbox-js"]
builtin-docextract-node = ["dep:xworkflow-docextract-builtin"]
builtin-subgraph-nodes = []
builtin-llm-node = []

[workspace]
resolver = "2"
members = [
	".",
	"crates/xworkflow-types",
	"crates/xworkflow-sandbox-js",
	"crates/xworkflow-sandbox-wasm",
	"crates/xworkflow-plugin-wasm",
	"crates/xworkflow-nodes-code",
	"crates/xworkflow-nodes-code-dylib",
"crates/xworkflow-nodes-docextract",
"crates/xworkflow-docextract-builtin",
]

[[bench]]
name = "bench_dispatch"
harness = false

[[bench]]
name = "bench_scalability"
harness = false

[[bench]]
name = "bench_components"
harness = false
required-features = ["builtin-code-node", "wasm-runtime"]

[[bench]]
name = "bench_data_ops"
harness = false

[[bench]]
name = "bench_meso_sandbox_wasm"
harness = false
required-features = ["builtin-sandbox-wasm"]

[[bench]]
name = "bench_meso_sandbox_js"
harness = false
required-features = ["builtin-sandbox-js"]

[[bench]]
name = "bench_meso_node_executors"
harness = false
required-features = ["builtin-code-node"]

[[bench]]
name = "bench_meso_dispatcher"
harness = false

[[bench]]
name = "bench_macro_iteration"
harness = false

[[bench]]
name = "bench_macro_scalability"
harness = false

[[bench]]
name = "bench_macro_topology"
harness = false

[[bench]]
name = "bench_micro_condition"
harness = false

[[bench]]
name = "bench_micro_dsl"
harness = false

[[bench]]
name = "bench_micro_segment"
harness = false

[[bench]]
name = "bench_micro_template"
harness = false

[[bench]]
name = "bench_micro_variable_pool"
harness = false
