[package]
name = "xworkflow-docextract-builtin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
xworkflow-types = { path = "../xworkflow-types" }
# PDF
pdf-extract = "0.7"
# DOCX (ZIP + XML)
zip = "2.0"
quick-xml = "0.36"
# Spreadsheet (XLSX/XLS/ODS)
calamine = "0.26"
# CSV
csv = "1.3"
# HTML
html2text = "0.12"
# JSON/YAML
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Encoding detection
encoding_rs = "0.8"
chardetng = "0.1"
# Error handling
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

