[package]
name = "xworkflow-nodes-code-dylib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[dependencies]
xworkflow = { path = "../..", features = ["plugin-system"] }
xworkflow-nodes-code = { path = "../xworkflow-nodes-code" }
