[package]
name = "xworkflow-nodes-llm-dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[dependencies]
xworkflow = { path = "../..", features = ["plugin-system", "builtin-llm-node"] }
xworkflow-nodes-llm = { path = "../xworkflow-nodes-llm" }
