[package]
name = "xworkflow-nodes-subgraph-dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[dependencies]
xworkflow = { path = "../..", features = ["plugin-system"] }
xworkflow-nodes-subgraph = { path = "../xworkflow-nodes-subgraph" }
