[package]
name = "xworkflow-plugin-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
wasmtime = "27"
wasmtime-wasi = "27"
wat = "1"
