[package]
name = "xworkflow-sandbox-js"
version = "0.1.0"
edition = "2021"

[features]
default = []
security = []

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }

boa_engine = "0.20"

xworkflow-types = { path = "../xworkflow-types" }

uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
regex = "1"
