[package]
name = "xworkflow-sandbox-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
base64 = "0.22"
wasmtime = "27"
wat = "1"
anyhow = "1.0"

xworkflow-types = { path = "../xworkflow-types" }
